# digital-chaos-manager-openenv

./: .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml
digital_chaos_env/: README.md  __init__.py  baseline.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
digital_chaos_env/graders/: __init__.py  easy_grader.py  hard_grader.py  medium_grader.py  scoring.py
digital_chaos_env/server/: Dockerfile  __init__.py  app.py  digital_chaos_env_environment.py
digital_chaos_env/tasks/: __init__.py  definitions.py  easy.yaml  hard.yaml  medium.yaml
graders/: easy_grader.py  hard_grader.py  medium_grader.py
server/: app.py
tasks/: easy.yaml  hard.yaml  medium.yaml
